# thread-safe-stack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ThreadSafeStack.h
src/: main  main.cpp
tests/: CMakeLists.txt  unitTests_threadSafeStack.cpp
tests/unit_test_results/: AccessorTests.accessAt.xml  AccessorTests.accessBack.xml  AccessorTests.accessBrackets.xml  AccessorTests.accessData.xml  AccessorTests.accessFront.xml  AccessorTests.empty.xml  AccessorTests.maxSize.xml  AccessorTests.other.xml  ConstructorTests.AssignmentOperator.xml  ConstructorTests.DefaultConstructor.xml  ConstructorTests.MoveAssignmentOperator.xml  ConstructorTests.MoveCopyConstructor.xml  ConstructorTests.ParamConstructor.xml  ConstructorTests.initializerListConstructor.xml  IteratorTests.TODO.xml  IteratorTests.comparision.xml  IteratorTests.iteratorBegin.xml  IteratorTests.iteratorEnd.xml  IteratorTests.iteratorSequence.xml  IteratorTests.postFix.xml  IteratorTests.preFix.xml  MemoryManger.ctor.xml  MemoryManger.deletedConstructor.xml  MemoryManger.max_size.xml  MemoryManger.moveAssignmentConstructor.xml  MemoryManger.moveConstructor.xml  MemoryManger.swap.xml  MemoryManger.verifyObjectEmpty.xml  ModifierTests.popBack.xml  ModifierTests.pushBack.xml  ModifierTests.resize.xml  VectorTest.CopyConstructor.xml  VectorTest.assign.xml  VectorTest.insert.xml  VectorTest.iteratorIncrement.xml  VectorTest.modifierErase.xml  VectorTest.revItr.xml
